[package]
name = "yhim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
unicode_reader = "1.0.2"
clap = { version = "4.1.6", features = ["derive"] }
inkwell = { version = "0.1.1", features = ["llvm15-0"] }
llvm-sys = "150.0.5"
colored = "2.0.0"
hound = "3.5.0"
regex = "1.7.1"
