cabal-version: 2.4
name: two-hand
version: 0.1.0.0

common common
  default-language: Haskell2010
  default-extensions:
    LambdaCase
    , NamedFieldPuns
    , FlexibleInstances
  ghc-options:
    -Weverything
    -Wno-implicit-prelude
    -Wno-name-shadowing
    -Wno-unsafe
    -Wno-missing-import-lists
    -Wno-unused-do-bind
    -Wno-missed-specialisations
    -Wno-all-missed-specialisations
    -Wno-monomorphism-restriction
    -Wno-missing-local-signatures
    -Wno-safe
    -Wno-missing-safe-haskell-mode
    -Wno-missing-deriving-strategies
    -Wno-prepositive-qualified-module

library
  import: common
  hs-source-dirs: src
  exposed-modules:
    TwoHand
  other-modules:
  build-depends:
    base
    , extra
    , transformers
    , parss

executable two-hand
  import: common
  hs-source-dirs: bin
  main-is: Main.hs
  build-depends:
    base
    , directory
    , two-hand
