[package]
name = "lhs-ui"
version = "0.1.0"
authors = ["xiuxiu62 <jacremer@live.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.61"
lhs-core = { version = "0.1.0", path = "../lhs-core" }
wasm-bindgen = "0.2.84"
yew = { version = "0.20.0", features = ["csr"] }

[dependencies.web-sys]
version = "0.3.61"
features = [
  "HtmlCanvasElement",
  "WebGlBuffer",
  "WebGlVertexArrayObject",
  "WebGlRenderingContext",
  "WebGlProgram",
  "WebGlShader",
  "WebGlUniformLocation"
]

[dev-dependencies]
xtask-wasm = "0.1.10"
