[package]
name = "lhs-ui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
gloo = "0.8.0"
lhs-core = { version = "0.1.0", path = "../lhs-core" }
wasm-bindgen = "0.2.84"
yew = { version = "0.20.0", features = ["csr"] }
lazy_static = "1.4.0"

[dependencies.web-sys] 
version = "0.3.61"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

[dev-dependencies]
xtask-wasm = "0.1.10"
